# TunK

./: .gitignore  CLAUDE.md  LICENSE  README.md  package-lock.json  package.json  tsconfig.json  vite.config.ts
@workspace/src/: lib.rs  main.rs
public/: index.html  main.ts  styles.css
public/src/: App.tsx  main.ts  style.css
src/: Cargo.toml  build.rs  commands.rs  config.rs  lib.rs  main.rs  state.rs  tauri.conf.json  tauri.conf.json (legacy, for compatibility)
src/capabilities/: default.json
src/network/: dispatch.rs  dns.rs  mod.rs  route.rs  tun.rs
src/proxy/: connector.rs  mod.rs  obfuscation.rs  reality.rs  sniffer.rs  tls13.rs
src/utils/: logger.rs  mod.rs
