[package]
name = "vpn-client"
version = "0.1.0"
edition = "2021"
authors = ["VPN Client Team"]
description = "Lightweight VPN Client for Windows 11"
license = "MIT"

# Библиотека vpn-client (lib.rs) - cdylib для Tauri
[lib]
name = "vpn_client_lib"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vpn-client"
path = "main.rs"

[dependencies]
tauri = { version = "2.0", default-features = false, features = ["tray-icon", "wry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
dashmap = "5.5"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"

# Новые зависимости для network модуля
reqwest = { version = "0.11", features = ["json"] }  # Для DoH запросов
percent-encoding = "2.3"  # Для URL encoding
base64 = "0.21"  # Для декодирования userinfo в ss:// подписках
winapi = { version = "0.3", features = [
    "winbase",
    "winnt",
    "handleapi",
] }

# Зависимости для Wintun
wintun = "0.1"
chrono = "0.4.44"

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tauri-build = { version = "2.0", default-features = false }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
