[package]
name = "vpn-client"
version = "0.1.0"
edition = "2021"
authors = ["VPN Client Team"]
description = "Lightweight VPN Client for Windows 11"
license = "MIT"

# Библиотека vpn-client (lib.rs) - cdylib для Tauri
[lib]
name = "vpn_client_lib"
path = "lib.rs"
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "vpn-client"
path = "main.rs"

[dependencies]
tauri = { version = "2.0", default-features = false, features = ["tray-icon", "wry"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.35", features = ["full"] }
dashmap = "5.5"
anyhow = "1.0"
thiserror = "1.0"
uuid = { version = "1.6", features = ["v4"] }
regex = "1.10"

# Новые зависимости для network модуля
reqwest = { version = "0.11", features = ["json"] }  # Для DoH запросов
percent-encoding = "2.3"  # Для URL encoding
base64 = "0.21"  # Для декодирования userinfo в ss:// подписках
winapi = { version = "0.3", features = [
    "winbase",
    "winnt",
    "handleapi",
] }

# Зависимости для Wintun
wintun = "0.1"
chrono = "0.4.44"

# Криптография для протоколов прокси (Shadowsocks AEAD, Trojan)
aead = "0.5"
aes-gcm = "0.10"
chacha20poly1305 = "0.10"
hkdf = "0.12"
sha1 = "0.10"
sha2 = "0.10"
md-5 = "0.10"
rand = "0.8"
hmac = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }

[dev-dependencies]
tokio-test = "0.4"

[build-dependencies]
tauri-build = { version = "2.0", default-features = false }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
